<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondActivity">

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#94CBE1" />

        <Button
            android:id="@+id/openImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_marginStart="50sp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50sp"
            android:text="@string/put_image"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/openImage"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:text="@string/firstName"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstName"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:text="@string/lastname"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lastName"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:text="@string/age"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/age"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:text="@string/address"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:layout_marginStart="50sp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50sp"
            android:text="@string/submit"
            android:textSize="30sp" />

    </RelativeLayout>
</layout>