<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/text"
            android:text="@string/main_text"
            android:textSize="35sp"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button1"
            android:text="@string/main_button1"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:layout_below="@id/text"
            android:layout_marginStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button2"
            android:text="@string/main_button2"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_below="@id/button1"
            android:layout_marginStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</layout>